# bharathi-canvas-backend

./: .env.docker  .gitignore  docker-compose.yml
board-api/: .env.local  Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
board-api/alembic/: env.py
board-api/app/: deps.py  main.py
board-api/app/api/v1/: columns.py  documents.py  features.py  projecthub.py  projects.py  router.py  tasks.py
board-api/app/auth/: models.py  routes.py  schemas.py  utils.py
board-api/app/core/: config.py
board-api/app/db/: base.py  init_models.py  seed.py  session.py
board-api/app/middleware/: cors.py
board-api/app/models/: column.py  document.py  feature.py  project.py  project_hub.py  story_seq.py  task.py  user.py
board-api/app/schemas/: auth.py  column.py  document.py  feature.py  project.py  project_hub.py  task.py
board-api/app/services/: auth.py  document_service.py  email_service.py  project_hub_service.py  story_id.py
board-api/app/utils/: security.py
board-api/storage/documents/: 264ef177-aef4-43dd-a0f6-047321baa35d_74daacd0-f765-4806-a72e-1cf5f12689c9.docx
docs/: Board_Module_QA_Testing_Document_With_APIs.docx  QA Testing Document-Board.docx
